# zerogate_sim

./: .gitattributes  .gitignore  AGENTS.md  CITATION.cff  LICENSE.md  PATCH_MANIFEST_v1_7_10_alpha.txt  PATCH_MANIFEST_v1_7_11_alpha.txt  PATCH_MANIFEST_v1_7_9_alpha.txt  PATCH_MANIFEST_v1_8_0_alpha.txt  PATCH_MANIFEST_v1_8_1_alpha.txt  PATCH_MANIFEST_v1_8_2_alpha.txt  README.md  REVIEWER_START_HERE.md  ROADMAP.md  pyproject.toml
.github/workflows/: compatibility.yml  tests.yml
contracts/: v1_8_1_development_plan_lock.json  v1_8_1_lineage_predictor.json  v1_8_2_development_generator.json
docs/: UNIVERSAL_CODING_WORKFLOW_v3_CODEX_PROJECT.md  anti_tautology_audit_plan.md  anti_tautology_audit_report.md  assistant_test_handoff.md  belnap_mirror.md  claim_boundary.md  controlled_synthetic_field_language.md  cross_logic_comparison_presets.md  current_evidence_index.md  current_evidence_state.md  echo_independence.md  evidence_handling.md  for_reviewers.md  four_gate_reconciliation.md  four_gates_debt_candidate_design.md  four_gates_debt_candidate_generator.md  four_gates_deepwide_debt_evidence.md  four_gates_fresh_seed_debt_reproduction.md  four_gates_reproduction_command_package.md  four_gates_triad27_debt_evidence.md  fuzzy_mirror.md  github_zenodo_release_plan.md  known_logic_boundary.md  known_logic_closeout.md  known_logic_comparison_report.md  license_and_citation.md  local_tooling_repair.md  manuscript_correction_package.md  manuscript_v2_empirical_readiness_gate.md  math_witness_map.md  native_ablation_baselines.md  native_deepwide_evidence.md  native_four_gate_claim_audit.md  native_triad27_evidence.md  paraconsistent_mirror.md  public_release_checklist.md  public_sharing_note.md  quickstart.md  recent_native_evidence_history.md  repo_hygiene.md  (+98 more)
docs/assets/: README.md  visual_index.md
docs/branch_notes/: final_visual_witness_closeout.md  public_readme_polish_branch.md  visual_witness_polish_branch.md
docs/history_vault/: README.md  README_surface_v1_6_22_snapshot.md  ROADMAP_v1_6_22_snapshot.md  legacy_evidence_visuals.md  runs_history_vault_plan.md  shadow_route_history_and_closeout.md  v1_7_authority_map.md
docs/methods/: DREED_ASSISTANT_REVIEW_PROTOCOL.md  README.md  dreed_active_inference_review_lens_v0.md
docs/papers/: README.md
docs/proof_records/: README.md  first_research_alpha_proof_records.csv  first_research_alpha_record.md  first_research_alpha_summary.csv  first_research_alpha_summary.json  first_research_alpha_v1_0_alpha.md
docs/release_notes/: v1_0_1_alpha.md  v1_0_2_alpha.md  v1_0_2_alpha_context_note.md  v1_0_alpha.md  v1_1_alpha.md  v1_2_3_alpha.md  v1_2_4_alpha.md  v1_2_5_alpha.md  v1_3_0_alpha.md  v1_3_1_alpha.md  v1_3_2_alpha.md  v1_3_3_alpha.md  v1_3_4_alpha.md  v1_3_5_alpha.md  v1_3_6_alpha.md  v1_4_0_alpha.md  v1_4_1_alpha.md  v1_4_2_alpha.md  v1_4_3_alpha.md  v1_4_4_alpha.md  v1_4_5_alpha.md  v1_5_0_alpha.md  v1_5_1_alpha.md  v1_5_2_alpha.md  v1_5_3_alpha.md  v1_5_4_alpha.md  v1_5_5_alpha.md  v1_6_0_alpha.md  v1_6_10_alpha.md  v1_6_11_alpha.md  v1_6_12_alpha.md  v1_6_13_alpha.md  v1_6_14_alpha.md  v1_6_15_alpha.md  v1_6_16_alpha.md  v1_6_17_alpha.md  v1_6_18_alpha.md  v1_6_19_alpha.md  v1_6_1_alpha.md  v1_6_20_alpha.md  (+32 more)
docs/reports/: fresh_controlled_81_243_visual_source.csv  fresh_controlled_deep81_four_gate_evidence_report.md  fresh_controlled_wide243_four_gate_evidence_report.md  v1_2_to_v1_4_4_learning_report.md  wide243_historical_evidence_intake.md
examples/: run_alpha_demo.py
examples/minimal_run/: README.md
scripts/: clean_repo.cmd  clean_repo.ps1  export_public_repo.cmd  export_public_repo.ps1  freeze_proof_record.cmd  freeze_proof_record.ps1  freeze_v1_alpha.cmd  freeze_v1_alpha.ps1  remove_readmap.cmd  run_batch.ps1  run_deep81.cmd  run_deep81.ps1  run_demo.ps1  run_matrix.cmd  run_matrix.ps1  run_proof.cmd  run_proof.ps1  run_stress.cmd  run_stress.ps1  run_v1_7_small_reproduction.ps1
src/zerogate_sim/: __init__.py  baselines.py  batch.py  belnap_mirror.py  clean.py  comparison_preset.py  config.py  cross_logic_report.py  demo.py  earned_one.py  echo_independence.py  endurance.py  export_public_repo.py  final_output.py  finalize.py  four_gate_reconciliation_report.py  four_gates_anti_tautology_audit_report.py  four_gates_debt_candidate_design_report.py  four_gates_debt_candidate_generator_report.py  four_gates_deepwide_debt_evidence_report.py  four_gates_fresh_seed_debt_reproduction_report.py  four_gates_manuscript_correction_package_report.py  four_gates_reproduction_command_package_report.py  four_gates_triad27_debt_evidence_report.py  four_gates_v1_6_closeout_report.py  fuzzy_mirror.py  gates.py  known_logic_closeout.py  lineage.py  matrix.py  native_ablation_baselines_report.py  native_deepwide_evidence_report.py  (+62 more)
tests/: test_assistant_test_handoff.py  test_baselines.py  test_batch.py  test_belnap_mirror.py  test_clean.py  test_comparison_preset.py  test_controlled_synthetic_field_language.py  test_cross_logic_report.py  test_earned_one.py  test_echo_independence.py  test_endurance.py  test_export_public_repo.py  test_final_output.py  test_finalize.py  test_four_gate_reconciliation_report.py  test_four_gates_anti_tautology_audit_report.py  test_four_gates_debt_candidate_design_report.py  test_four_gates_debt_candidate_generator_report.py  test_four_gates_deepwide_debt_evidence_report.py  test_four_gates_fresh_seed_debt_reproduction_report.py  test_four_gates_manuscript_correction_package_report.py  test_four_gates_reproduction_command_package_report.py  test_four_gates_triad27_debt_evidence_report.py  test_four_gates_v1_6_closeout_report.py  test_fresh_controlled_evidence_reports.py  test_fuzzy_mirror.py  test_gates.py  test_history_vault_public_surface.py  test_known_logic_closeout.py  test_learning_report.py  test_lineage.py  test_matrix.py  test_native_ablation_baselines_report.py  test_native_deepwide_evidence_report.py  test_native_four_gate_claim_audit_report.py  test_native_math_invariants.py  test_native_triad27_evidence_report.py  test_paraconsistent_mirror.py  test_power_check.py  test_proof.py  (+52 more)
(+11 files in other folders)
