[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zerogate-sim"
version = "1.7.0a0"
description = "Toy simulation framework for zero-gate dimensional emergence."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Marek Bargiel" }
]
license = { text = "MIT" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.24,<3",
  "matplotlib>=3.7,<4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10"
]

[project.scripts]
zerogate-demo = "zerogate_sim.demo:main"
zerogate-batch = "zerogate_sim.batch:main"
zerogate-clean = "zerogate_sim.clean:main"
zerogate-stress = "zerogate_sim.stress:main"
zerogate-matrix = "zerogate_sim.matrix:main"
zerogate-finalize = "zerogate_sim.finalize:main"
zerogate-proof = "zerogate_sim.proof:main"
zerogate-record = "zerogate_sim.proof_record:main"
zerogate-release = "zerogate_sim.release_record:main"
zerogate-cross-logic = "zerogate_sim.cross_logic_report:main"
zerogate-export-public = "zerogate_sim.export_public_repo:main"
zerogate-cross-logic-preset = "zerogate_sim.comparison_preset:main"
zerogate-seed-block-report = "zerogate_sim.seed_block_report:main"
zerogate-threshold-sensitivity = "zerogate_sim.threshold_sensitivity:main"
zerogate-witness-ablation = "zerogate_sim.witness_ablation_report:main"
zerogate-role-stripped-features = "zerogate_sim.role_stripped_feature_report:main"
zerogate-shadow-score = "zerogate_sim.shadow_score_report:main"
zerogate-shadow-baseline-falsifier = "zerogate_sim.shadow_baseline_falsifier_report:main"
zerogate-four-gate-reconciliation = "zerogate_sim.four_gate_reconciliation_report:main"
zerogate-shadow-holdout-evaluation = "zerogate_sim.shadow_holdout_evaluation_report:main"
zerogate-shadow-triad27-preflight = "zerogate_sim.shadow_triad27_preflight_report:main"
zerogate-shadow-weather-hardening = "zerogate_sim.shadow_weather_hardening_report:main"
zerogate-shadow-triad27-hardened-evidence = "zerogate_sim.shadow_triad27_hardened_evidence_report:main"
zerogate-shadow-discrimination = "zerogate_sim.shadow_discrimination_report:main"
zerogate-shadow-lane-discrimination = "zerogate_sim.shadow_lane_discrimination_report:main"
zerogate-runs-inventory = "zerogate_sim.runs_inventory_report:main"
zerogate-shadow-route-audit = "zerogate_sim.shadow_route_audit_report:main"
zerogate-native-four-gate-claim-audit = "zerogate_sim.native_four_gate_claim_audit_report:main"
zerogate-native-ablation-baselines = "zerogate_sim.native_ablation_baselines_report:main"
zerogate-native-triad27-evidence = "zerogate_sim.native_triad27_evidence_report:main"
zerogate-native-deepwide-evidence = "zerogate_sim.native_deepwide_evidence_report:main"
zerogate-four-gates-debt-design = "zerogate_sim.four_gates_debt_candidate_design_report:main"
zerogate-four-gates-debt-generator = "zerogate_sim.four_gates_debt_candidate_generator_report:main"
zerogate-four-gates-triad27-debt-evidence = "zerogate_sim.four_gates_triad27_debt_evidence_report:main"
zerogate-four-gates-deepwide-debt-evidence = "zerogate_sim.four_gates_deepwide_debt_evidence_report:main"
zerogate-four-gates-fresh-seed-debt-reproduction = "zerogate_sim.four_gates_fresh_seed_debt_reproduction_report:main"
zerogate-four-gates-anti-tautology-audit = "zerogate_sim.four_gates_anti_tautology_audit_report:main"
zerogate-four-gates-reproduction-package = "zerogate_sim.four_gates_reproduction_command_package_report:main"
zerogate-four-gates-manuscript-correction-package = "zerogate_sim.four_gates_manuscript_correction_package_report:main"
zerogate-four-gates-v1-6-closeout = "zerogate_sim.four_gates_v1_6_closeout_report:main"
zerogate-v1-7-core-question-contract = "zerogate_sim.v1_7_core_question_contract:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
